--- a/SquirrelTube/SquirrelTube.csproj
+++ b/SquirrelTube/SquirrelTube.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="ImGui.NET" Version="1.89.5" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
+    <PackageReference Include="NativeFileDialogSharp" Version="0.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
   <ItemGroup>
