LayerGroups, attempts at making the UI prettier, fixed serialization bug with Rules

--- a/Ratuber/Ratuber.csproj
+++ b/Ratuber/Ratuber.csproj
@@ -24,6 +24,11 @@
   <ItemGroup>
     <ProjectReference Include="..\ImGuiNetMonogame\ImGuiNetMonogame.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="fallback.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
     <Exec Command="dotnet tool restore" />
